# test-oplati

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/products/: admin.py  models.py  services.py  urls.py  views.py
apps/products/management/commands/: seed_data.py
apps/products/migrations/: 0001_initial.py  0002_eur_replace_usd.py
apps/products/tests/: conftest.py  test_currency.py  test_integration.py  test_management.py  test_models.py  test_services.py  test_views.py  test_views_extra.py
config/: settings.py  urls.py
static/js/: stripe-checkout.js
templates/products/: checkout_cancel.html  checkout_success.html  item.html  item_list.html
