[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["apps/products/tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --reuse-db"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["apps", "config"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "config/asgi.py",
    "config/wsgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "config"]
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
disable_error_code = ["var-annotated", "attr-defined"]

[[tool.mypy.overrides]]
module = ["stripe.*"]
ignore_missing_imports = true
